samples/_failures_safe/1761289286_cf00ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d46d7f9.c: In function ‘main’:
./samples/SAFE/__tmp_4d46d7f9.c:163:5: error: expected declaration or statement at end of input
  163 |     }
      |     ^
